--- a/contracts/Clarinet.toml
+++ b/contracts/Clarinet.toml
@@ -7,6 +7,11 @@ cache_dir = './.cache'
 
 [[project.requirements]]
 contract_id = 'SP3FBR2AGK5H9QBDH3EEN6DF8EK8JY7RX8QJ5SVTE.sip-010-trait-ft-standard'
+[contracts.bank]
+path = 'contracts/bank.clar'
+clarity_version = 3
+epoch = 3.1
+
 [contracts.sbtc-token]
 path = 'contracts/sbtc-token.clar'
 clarity_version = 3
