--- a/contracts/deployments/default.devnet-plan.yaml
+++ b/contracts/deployments/default.devnet-plan.yaml
@@ -6,6 +6,17 @@ stacks-node: "http://localhost:20443"
 bitcoin-node: "http://devnet:devnet@localhost:18443"
 plan:
   batches:
+    - id: 0
+      transactions:
+        - requirement-publish:
+            contract-id: SP3FBR2AGK5H9QBDH3EEN6DF8EK8JY7RX8QJ5SVTE.sip-010-trait-ft-standard
+            remap-sender: ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM
+            remap-principals:
+              SP3FBR2AGK5H9QBDH3EEN6DF8EK8JY7RX8QJ5SVTE: ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM
+            cost: 8400
+            path: "./.cache/requirements/SP3FBR2AGK5H9QBDH3EEN6DF8EK8JY7RX8QJ5SVTE.sip-010-trait-ft-standard.clar"
+            clarity-version: 1
+      epoch: "2.0"
     - id: 1
       transactions:
         - contract-publish:
@@ -18,7 +29,7 @@ plan:
         - contract-publish:
             contract-name: bank
             expected-sender: ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM
-            cost: 130410
+            cost: 126540
             path: contracts/bank.clar
             anchor-block-only: true
             clarity-version: 3
