--- a/simulator/sbtc_loan_simulator/Cargo.toml
+++ b/simulator/sbtc_loan_simulator/Cargo.toml
@@ -4,4 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+axum = "0.8.1"
 rand = "0.9.0"
+serde = { version = "1.0", features = ["derive"] }
+tokio = { version = "1", features = ["full"] }
