--- a/simulator/sbtc_loan_simulator/Cargo.toml
+++ b/simulator/sbtc_loan_simulator/Cargo.toml
@@ -4,7 +4,13 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-axum = "0.8.1"
+napi = "2.16.16"
+napi-derive = "2.16.13"
 rand = "0.9.0"
 serde = { version = "1.0", features = ["derive"] }
-tokio = { version = "1", features = ["full"] }
+
+[build-dependencies]
+napi-build = "2.1.5"
+
+[lib]
+crate-type = ["cdylib"]
