--- a/simulator/sbtc_loan_simulator/Cargo.toml
+++ b/simulator/sbtc_loan_simulator/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 napi = "2.16.16"
 napi-derive = "2.16.13"
+napi-sys = "2.4.0"
 rand = "0.9.0"
 serde = { version = "1.0", features = ["derive"] }
 
@@ -14,3 +15,6 @@ napi-build = "2.1.5"
 
 [lib]
 crate-type = ["cdylib"]
+
+[build]
+rustflags = ["-L", "node_modules/node-addon-api"]
